--- a/.github/workflows/MAIN.yml
+++ b/.github/workflows/MAIN.yml
@@ -1,35 +1,20 @@
-name: Generate Snake Contribution Graph
-
+name: Generate Datas
 on:
-  schedule:
-    - cron: "0 */6 * * *"
+  schedule: # execute every 12 hours
+    - cron: "* */12 * * *"
   workflow_dispatch:
-
 jobs:
   build:
+    name: Jobs to update datas
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-
-      - name: Generate Contribution Graph
-        uses: Platane/snk@master
-        with:
+      # Snake Animation
+      - uses: Platane/snk@master
+        id: snake-gif
+with:
           github_user_name: humayun-raza-030
-          gif_out_path: dist/github-contribution-grid-snake.gif
           svg_out_path: dist/github-contribution-grid-snake.svg
-
-      - name: Commit & Push Changes
-        run: |
-          git config --global user.name "github-actions"
-          git config --global user.email "github-actions@github.com"
-          git add dist/github-contribution-grid-snake.*
-          git commit -m "Updated Contribution Graph" || echo "No changes to commit"
-          git push origin master
-
-      - name: Deploy to GitHub Pages
-        uses: crazy-max/ghaction-github-pages@v2.1.3
+      - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
           target_branch: output
           build_dir: dist
