--- a/.github/workflows/MAIN.yml
+++ b/.github/workflows/MAIN.yml
@@ -1,52 +1,27 @@
-name: Generate Snake
-
-# Controls when the action will run. This action runs every 6 hours.
+name: Update GitHub Contributions Graph
 
 on:
   schedule:
-      # every 6 hours
-    - cron: "0 */6 * * *"
+    - cron: "0 0 * * *"  # Runs daily at midnight UTC
+  workflow_dispatch:  # Allows manual triggering
 
-# This command allows us to run the Action automatically from the Actions tab.
-  workflow_dispatch:
-
-# The sequence of runs in this workflow:
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
 
-    # Checks repo under $GITHUB_WORKSHOP, so your job can access it
-      - uses: actions/checkout@v2
+      - name: Generate 3D Contribution Graph
+        run: |
+          mkdir -p profile-3d-contrib
+          curl -o profile-3d-contrib/profile-green-animate.svg https://github.com/humayun-raza-030/humayun-raza-030/raw/main/profile-3d-contrib/profile-green-animate.svg
 
-    # Generates the snake  
-      - uses: Platane/snk@master
-        id: snake-gif
-        with:
-          github_user_name: humayun-raza-030
-          # these next 2 lines generate the files on a branch called "output". This keeps the main branch from cluttering up.
-          gif_out_path: dist/github-contribution-grid-snake.gif
-          svg_out_path: dist/github-contribution-grid-snake.svg
-
-     # show the status of the build. Makes it easier for debugging (if there's any issues).
-      - run: git status
-
-      # Push the changes
-      - name: Push changes
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: master
-          force: true
-
-      - uses: crazy-max/ghaction-github-pages@v2.1.3
-        with:
-          # the output branch we mentioned above
-          target_branch: output
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Commit and Push Changes
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "github-actions@github.com"
+          git add profile-3d-contrib/profile-green-animate.svg
+          git commit -m "Updated 3D Contribution Graph" || echo "No changes to commit"
+          git push origin main
